--- a/emacs.org
+++ b/emacs.org
@@ -1073,7 +1073,7 @@ line instead."
        (defalias 'org-babel-execute:json 'org-babel-execute:passthrough)
        (defalias 'org-babel-execute:js 'org-babel-execute:passthrough)
        (defun my-org-confirm-babel-evaluate (lang body)
-         (not (or (tring= lang "python")
+         (not (or (string= lang "python")
                   (string= lang "bash")
                   (string= lang "restclient")
                   (string= lang "emacs-lisp")
@@ -1138,9 +1138,9 @@ line instead."
          :after org
          :config
          (require 'ox-reveal)
-         (setq org-reveal-root "https://cdn.jsdelivr.net/npm/reveal.js@4.5.0")
+         (setq org-reveal-root "https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/")
          (setq org-reveal-external-plugins
-               '((tableofcontents . "https://cdn.jsdelivr.net/npm/reveal.js-tableofcontents@1.0.1"))))
+               '((tableofcontents . "https://cdn.jsdelivr.net/npm/reveal.js-tableofcontents@1.0.1/"))))
        )
 
       ;;(use-package polymode )
